# kmeans

./: .gitignore  .travis.yml  LICENSE  README.md  kmeans-par.cabal  kmeans.cabal
benchmark/: Main.lhs
src/Algorithms/Lloyd/: Sequential.lhs  Strategies.lhs
src/Data/Functor/: Extras.hs
src/Data/Vector/: Split.hs
test/Algorithms/Lloyd/: SequentialSpec.hs  StrategiesSpec.hs
