name:                kmeans
version:             1.0.2
synopsis:            Sequential and parallel implementations of Lloyd's algorithm.
license:             MIT
license-file:        LICENSE
author:              vi
maintainer:          me@vikramverma.com
category:            Algorithm
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Algorithms.Lloyd.Sequential,
                       Algorithms.Lloyd.Strategies
  build-depends:       base, vector, semigroups, parallel, split
  hs-source-dirs:      src
  ghc-options:         -threaded
  default-language:    Haskell2010

benchmark kmeans-benchmark
  type:             exitcode-stdio-1.0
  main-is:          Main.lhs
  hs-source-dirs:   benchmark
  build-depends:    base, random, criterion, normaldistribution, kmeans, deepseq, vector
  ghc-options:      -threaded
  default-language: Haskell2010
